# CMakeCatchTemplate

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CTestConfig.cmake  IEC-62304-2006.md  INSTALLATION.txt  LICENSE.txt  MYPROJECTConfig.cmake.in  MyProjectConfig.cmake.in  MyProjectConfigure.h.in  README.md  README.txt  UseMYPROJECT.cmake.in  UseMyProject.cmake.in  appveyor.yml  config.sh  env_vars.sh  rename.sh  restore.sh  setup.py  travis_cmake_build.sh
.github/workflows/: basic_build.yml  build_arrayfire.yml  build_boost.yml  build_with_boost.yml  build_with_opencv.yml  ccpp.yml  pcl.yml  pybind.yml  pyboost.yml  qt_project.yml  rename_and_build.yml
CMake/: CPackOptions.cmake.in  CPackSetup.cmake  CTestContinuous.cmake.in  CTestCustom.cmake.in  FindEigen.cmake  FindGit.cmake  Findgflags.cmake  Findgflags.cmake.in  Findglog.cmake  Findglog.cmake.in  StartVS.bat.in  SuperBuild.cmake  mitkFunctionGetVersion.cmake  mpAddArrayFire.cmake  mpAddBoost.cmake  mpAddDocs.cmake  mpAddEigen.cmake  mpAddFLANN.cmake  mpAddGuiProjects.cmake  mpAddOpenCV.cmake  mpAddPCL.cmake  mpAddPythonBindings.cmake  mpAddUnityWrapper.cmake  mpAddVL.cmake  mpAddVTK.cmake  mpAddgflags.cmake  mpAddglog.cmake  mpCreateGuiApplication.cmake  mpExternalProjectHelperMacros.cmake  mpFunctionFixInstallNameForMac.cmake  mpIncludeArrayFire.cmake  mpIncludeBoost.cmake  mpIncludeCUDA.cmake  mpIncludeDocs.cmake  mpIncludeEigen.cmake  mpIncludeMPI.cmake  mpIncludeOpenCV.cmake  mpIncludeOpenMP.cmake  mpIncludePCL.cmake  mpIncludePythonBindings.cmake  (+20 more)
CMake/ExternalProjects/: ArrayFire.cmake  Boost.cmake  ChangeVLLibsInstallNameForMac.cmake.in  Eigen.cmake  FLANN.cmake  MoveBoostLibsToLibDirForWindows.cmake.in  OpenCV.cmake  PCL-BoostWithoutSystemPaths.patch  PCL.cmake  VL.cmake  VTK.cmake  gflags.cmake  glog.cmake
Code/: CMakeLists.txt  mpBasicTypes.cpp  mpBasicTypes.h  mpMyFunctions.cpp  mpMyFunctions.h  mpWin32ExportHeader.h
Code/Apps/: CMakeLists.txt  mpMyFirstApp.cpp
Code/CommandLineApps/: CMakeLists.txt  mpMyFirstApp.cpp
Code/GuiApps/: CMakeLists.txt
Code/GuiApps/MITK-Blueberry/: CMakeLists.txt
Code/GuiApps/QML/: CMakeLists.txt
Code/GuiApps/QML/App/: main.cpp
Code/GuiApps/QMLDemo/: CMakeLists.txt
Code/GuiApps/QMLDemo/App/: main.cpp  mpQOpenGLTriangleRenderer.cpp  mpQOpenGLTriangleRenderer.h  mpTriangleModel.cpp  mpTriangleModel.h  mpTriangleRenderer.cpp  mpTriangleRenderer.h
Code/GuiApps/QMLDemo/Model/: mpBaseModel.cpp  mpTriangleModel.cpp
Code/GuiApps/QMLDemo/Resources/: QMLDemo.rc
Code/GuiApps/QMLDemo/View/: main.qml  mpQOpenGLTriangleRenderer.cpp  mpQOpenGLTriangleRenderer.h
Code/GuiApps/QMLVLDemo/: CMakeLists.txt
Code/GuiApps/QMLVLDemo/App/: main.cpp  mpQMLVLOpenGLContext.cpp  mpQMLVLOpenGLContext.h  mpTriangleModel.cpp  mpTriangleModel.h  mpVLTriangleRenderer.cpp  mpVLTriangleRenderer.h
Code/GuiApps/QMLVLDemo/Resources/: QMLVLDemo.rc
Code/GuiApps/QMLVLDemo/View/: main.qml
Code/GuiApps/QMLVTKDemo/: CMakeLists.txt
Code/GuiApps/QMLVTKDemo/App/: main.cpp
Code/GuiApps/QMLVTKDemo/Model/: mpBaseModel.h  mpCubeModel.cpp  mpCubeModel.h  mpTriangleModel.cpp  mpTriangleModel.h
Code/GuiApps/QMLVTKDemo/View/: main.qml  mpQQuickVTKView.cpp  mpQQuickVTKView.h
Code/GuiApps/QOpenGLDemo/: CMakeLists.txt  main.cpp  mpOpenGLMainWindow.cpp  mpOpenGLMainWindow.h  mpOpenGLWidget.cpp  mpOpenGLWidget.h
Code/GuiApps/QtVTK/: CMakeLists.txt
Code/GuiApps/QtVTK/App/: CMakeLists.txt  main.cpp  mpCentralWidget.cpp  mpCentralWidget.h  mpMainWindow.cpp  mpMainWindow.h  mpMainWindow.ui
Code/GuiApps/QtVTK/Controller/: CMakeLists.txt  mpControlPanelWidget.cpp  mpControlPanelWidget.h  mpControlPanelWidget.ui  mpQtVTKControllerWin32ExportHeader.h  mpTwinSliderWidget.cpp  mpTwinSliderWidget.h  mpTwinSliderWidget.ui
Code/GuiApps/QtVTK/Model/: CMakeLists.txt  mpModelBackend.cpp  mpModelBackend.h  mpQtVTKModelWin32ExportHeader.h  mpVolumeRenderingModel.cpp  mpVolumeRenderingModel.h
Code/GuiApps/QtVTK/View/: CMakeLists.txt  mpVTKViewWidget.cpp  mpVTKViewWidget.h
Code/GuiApps/QtVTKDemo/App/: CMakeLists.txt  main.cpp  mpCentralWidget.h  mpCentralWidget.ui  mpMainWindow.h  mpMainWindow.ui
Code/GuiApps/QtVTKDemo/Controller/: mpControlPanelWidget.h  mpTwinSliderWidget.cpp  mpTwinSliderWidget.h
Code/GuiApps/QtVTKDemo/Model/: CMakeLists.txt  mpVolumeRenderingModel.h
Code/GuiApps/QtVTKDemo/View/: mpQtVTKViewWin32ExportHeader.h  mpVTKViewWidget.h
Code/Lib/: CMakeLists.txt  mpBasicTypes.h  mpException.cpp  mpException.h  mpExceptionMacro.h  mpMyFunctions.cpp  mpMyFunctions.h
Code/Lib/PythonBinding/: CMakeLists.txt
Code/Lib/PythonBoost/: CMakeLists.txt  mpLibPythonWithOpenCV.cpp
Code/Lib/PythonPyBind/: CMakeLists.txt
Code/Lib/PythonWrapping/: CMakeLists.txt
Code/PythonBoost/: CMakeLists.txt  mpLibPython.cpp  mpLibPythonWithOpenCV.cpp
Code/PythonPyBind/: CMakeLists.txt  docstrings.h  mpLibPython.cpp
Code/UnityWrapper/: CMakeLists.txt  mpUnityWrapper.cpp  mpUnityWrapper.h
Documentation/: CMakeLists.txt  License.dox  MainPage.dox.in
Testing/: CMakeLists.txt  mpBasicTest.cpp  mpCatchMain.cpp  mpCatchMain.h  mpCommandLineArgsTest.cpp  mpCudaTest.cu
Utilities/CppCheck/: MYPROJECTCppCheck.cmake  MYPROJECTFiles.txt.in  MyProjectCppCheck.cmake
Utilities/Doxygen/: doxygen.config.in  myprojectdoxygen.pl.in
Utilities/KWStyle/: MYPROJECTHeader.h  MYPROJECTKWS.xml.in  MYPROJECTKWStyle.cmake  MyProjectFiles.txt.in  MyProjectHeader.h  MyProjectKWS.xml.in  MyProjectKWStyle.cmake
